cloud-native/aks-webapp-routing/hello-deployment-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-web-app-routing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-2
  namespace: hello-web-app-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-2
  template:
    metadata:
      labels:
        app: aks-helloworld-2
    spec:
      containers:
      - name: aks-helloworld-2
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-2
  namespace: hello-web-app-routing
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://akv-books24543.vault.azure.net/certificates/hello-2/0ccf1df2eb384153a074ce6dcbe8e3a2
  name: aks-helloworld-2
  namespace: hello-web-app-routing
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: hello2.contoso.work
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-2
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hello2.contoso.work
    secretName: keyvault-aks-helloworld-2
